--- a/SpaceshipClicker/SpaceshipClicker.Web/SpaceshipClicker.Web.csproj
+++ b/SpaceshipClicker/SpaceshipClicker.Web/SpaceshipClicker.Web.csproj
@@ -19,9 +19,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SpaceshipClicker.Constants\SpaceshipClicker.Constants.csproj" />
     <ProjectReference Include="..\SpaceshipClicker.Data\SpaceshipClicker.Data.csproj" />
     <ProjectReference Include="..\SpaceshipClicker.Services\SpaceshipClicker.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Views\" />
   </ItemGroup>
 
 </Project>
