--- a/SpaceshipClicker/SpaceshipClicker.Web/SpaceshipClicker.Web.csproj
+++ b/SpaceshipClicker/SpaceshipClicker.Web/SpaceshipClicker.Web.csproj
@@ -7,6 +7,8 @@
 
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.2.2" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" PrivateAssets="All" />
@@ -19,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SpaceshipClicker.Common\SpaceshipClicker.Common.csproj" />
     <ProjectReference Include="..\SpaceshipClicker.Data\SpaceshipClicker.Data.csproj" />
     <ProjectReference Include="..\SpaceshipClicker.Services\SpaceshipClicker.Services.csproj" />
   </ItemGroup>
