added crewmate name stuff

--- a/SpaceshipClicker/SpaceshipClicker.Web/SpaceshipClicker.Web.csproj
+++ b/SpaceshipClicker/SpaceshipClicker.Web/SpaceshipClicker.Web.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\SpaceshipClicker.Services\SpaceshipClicker.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Game\Models\" />
+  </ItemGroup>
+
 </Project>
